# Stock-Tracker

./: .env.example  .gitignore  LICENSE  README.md  SECURITY.md  progress_agent_v2.md  pyproject.toml  requirement.txt  requirements-dev.txt  requirements.txt  task.md  task_agent_v2.md
configs/: config.yaml
data/sample/: regression_bars_long.csv  sample_bars.csv
deploy/launchd/: com.example.stock-agent.worker.plist
deploy/pm2/: ecosystem.config.cjs
deploy/systemd/: stock-agent-worker.service
docs/: ai_agent_prompt_review.md  current_system_dag.md  deployment.md  input_control.md  live_data_providers.md  v2_architecture.md  v2_file_manifest.md  v2_operations.md
scripts/: stack_v2.sh  submit_research_v2.sh
src/stock_agent/: __init__.py  cli.py  config.py  config_changes.py  config_loader.py  schemas.py  tracing.py
src/stock_agent/agent/: __init__.py  prompts.py  runner.py  runtime.py  tools.py
src/stock_agent/agents/: __init__.py  anomaly.py  macro.py  orchestrator.py  planner.py  policies.py  registry.py  report.py  runtime.py  signal_discovery.py
src/stock_agent/artifacts/: __init__.py  service.py  store.py
src/stock_agent/bars/: __init__.py  aggregator.py  builder.py  gap_fill.py  quarantine.py  validation.py
src/stock_agent/broker/: __init__.py  base.py
src/stock_agent/commands/: bars.py  config_review.py  health.py  web.py  (+10 more)
tests/: __init__.py  test_active_j_strategy.py  test_active_signal_runner.py  test_agent_observability.py  test_agent_service.py  test_agent_tool_draft.py  test_anomaly_agent.py  test_artifact_store.py  test_bar_aggregation.py  test_bar_builder.py  test_bar_quarantine.py  test_bars_replay.py  test_boll_strategy.py  test_broker_base.py  test_broker_market_data_provider.py  test_candidate_builder.py  test_claim_validator.py  test_cli_entrypoint.py  test_command_intents.py  test_config.py  test_config_changes.py  test_config_loader.py  test_config_review_cli.py  test_csv_demo_provider.py  test_data_evidence_workflow.py  test_deploy_validate.py  test_deployment_templates.py  test_e2e_regression.py  test_evidence_service.py  test_evidence_validator.py  test_fixtures.py  test_health_monitor.py  test_input_entry_integration.py  test_input_gate.py  test_interactive_cli.py  test_kdj_strategy.py  test_lake_storage.py  test_live_provider.py  test_llm_parser.py  test_ma_cross_demo_strategy.py  (+66 more)
(+167 files in other folders)
