[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "stock-agent"
version = "0.1.0"
description = "Local-first US market watch and signal assistant."
readme = "README.md"
requires-python = ">=3.12"
authors = [
  { name = "Perry-ZHENG" }
]
dependencies = [
  "fastapi>=0.115",
  "jinja2>=3.1",
  "langchain>=1.3.11",
  "langchain-openai>=1.3.3",
  "pydantic>=2",
  "python-multipart>=0.0.20",
  "pyyaml>=6",
  "tzdata>=2025.2",
  "uvicorn>=0.34",
]

[project.optional-dependencies]
dev = [
  "httpx>=0.28",
  "pytest>=8",
]

[project.scripts]
stock-agent = "stock_agent.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
