[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "stock-agent"
version = "0.1.0"
description = "Evidence-first, non-trading market research Agent."
readme = "README.md"
requires-python = ">=3.12"
authors = [
  { name = "Perry-ZHENG" }
]
dependencies = [
  "certifi>=2025.1.31",
  "fastapi>=0.115",
  "jinja2>=3.1",
  "langchain>=1.3.11",
  "langchain-openai>=1.3.3",
  "mcp>=1.0,<2",
  "pydantic>=2",
  "python-multipart>=0.0.20",
  "pyyaml>=6",
  "tzdata>=2025.2",
  "uvicorn>=0.34",
]

[project.optional-dependencies]
dev = [
  "httpx>=0.28",
  "pytest>=8",
  "uv>=0.6,<1",
]

[project.scripts]
stock-agent = "stock_agent.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
  "full_benchmark: explicit offline release benchmark, excluded from the default CI subset",
]
